remove the names where the first name is equal to the last name